example/src/main/webapp/WEB-INF/views/error/401.html.ssp
<h3>Failed!</h3>
<hr/>
<p class="alert alert-warning">
  <strong>Unauthorized!</strong>
</p>
